1、优化聊天界面的显示内容 2、添加消息的菜单事件

--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -34,7 +34,8 @@
 		        android:layout_marginLeft="@dimen/chat_msg_list_spacing_left_right"
 		        android:layout_marginStart="@dimen/chat_msg_list_spacing_left_right"
 		        android:layout_marginRight="@dimen/chat_msg_list_spacing_left_right"
-		        android:layout_marginEnd="@dimen/chat_msg_list_spacing_left_right"/>
+		        android:layout_marginEnd="@dimen/chat_msg_list_spacing_left_right"
+		        android:transcriptMode="normal"/>
 		    
 		    <!-- 信息编辑框 -->
 		    <RelativeLayout 
