--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -31,8 +31,8 @@
 	        android:visibility="gone"/>
 	    
 	    <include 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_width="@dimen/progress_max_size"
+	        android:layout_height="@dimen/progress_max_size"
 	        android:layout_centerInParent="true"
 	        layout="@layout/layout_loading"/>
 	    
