--- a/res/layout/activity_test.xml
+++ b/res/layout/activity_test.xml
@@ -1,42 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- net.ibaixin.chat.view.FitSystemWindow -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+<net.ibaixin.chat.view.FitSystemWindowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <include layout="@layout/com_toolbar"/>
-    <ScrollView
+    <RelativeLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content">
-	
-	    <LinearLayout
-	        android:orientation="vertical"
+	    android:layout_height="match_parent">
+	    <EditText 
+	        android:id="@+id/et_content"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:padding="@dimen/activity_horizontal_margin">
-	
-	        <Button
-	            android:id="@+id/basicNoTitle"
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp"
-	            android:text="没有标题" />
-	
-	        <Button
-	            android:id="@+id/basic"
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp"
-	            android:text="基本标题"
-	            android:layout_marginTop="10dp" />
-	
-	        <Button
-	            android:id="@+id/basicLongContent"
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp"
-	            android:text="基本内容成文本"
-	            android:layout_marginTop="10dp" />
-	
-	    </LinearLayout>
-	
-	</ScrollView>
-</LinearLayout>
+	        android:background="#34ff0000"
+	        android:gravity="left|top"
+	        android:layout_alignParentBottom="true"/>
+	    <ListView 
+	        android:id="@id/lv_data"
+	        style="@style/CommonListViewStyle"
+	        android:layout_above="@id/et_content" />
+	    
+	</RelativeLayout>
+</net.ibaixin.chat.view.FitSystemWindowLinearLayout>
+
 
