--- a/res/layout/layout_loading.xml
+++ b/res/layout/layout_loading.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res/net.ibaixin.chat"    
     android:id="@id/pb_loading"
-    android:layout_width="@dimen/progress_wheel_size"
-    android:layout_height="@dimen/progress_wheel_size"
+    android:layout_width="@dimen/progress_max_size"
+    android:layout_height="@dimen/progress_max_size"
     android:layout_centerHorizontal="true"
     android:layout_gravity="center"
     app:matProg_fillRadius="true"
