--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,8 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     
-    <dimen name="progress_wheel_size">80dp</dimen>
-    
     <dimen name="tool_bar_top_padding">0dp</dimen>
     
     <dimen name="login_horizontal_margin">20dp</dimen>
@@ -131,5 +129,22 @@
     <dimen name="location_my_btn_margin">20dp</dimen>
     
     <dimen name="alert_dialog_padding_material">24dp</dimen>
+    
+    <!-- 文本消息详情的字体大小 -->
+    <dimen name="chat_msg_info_text_size">48sp</dimen>
+    
+    <dimen name="chat_msg_img_max_width">100dp</dimen>
+    <dimen name="chat_msg_img_max_height">100dp</dimen>
+    
+    <dimen name="chat_msg_img_arrow_radius">5dp</dimen>
+    <dimen name="chat_msg_img_arrow_top">16dp</dimen>
+    <dimen name="chat_msg_img_arrow_width">20dp</dimen>
+    <dimen name="chat_msg_img_arrow_height">8dp</dimen>
+    
+    <!-- 圆形进度条的各种尺寸 -->
+    <dimen name="progress_max_size">64dp</dimen>
+    <dimen name="progress_medium_size">48dp</dimen>
+    <dimen name="progress_min_size">36dp</dimen>
+    <dimen name="progress_mic_size">12dp</dimen>
     
 </resources>
