--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -25,8 +25,14 @@
     <!-- Toolbar的样式 -->
     <style name="AppTheme.Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
 	    <!-- <item name="android:textColorPrimary">@android:color/white</item> -->
+	    <item name="colorControlNormal">@android:color/white</item>
 	</style>
 	
+    <style name="MyToolBarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="titleTextAppearance">@style/AppTheme.Toolbar.TitleTextStyle</item>
+        <item name="subtitleTextAppearance">@style/AppTheme.Toolbar.SubtitleTextStyle</item>
+    </style>
+    
     <!-- Toolbar菜单的样式 -->
 	<style name="AppTheme.Toolbar.Menu" parent="ThemeOverlay.AppCompat.Light">
 	    <item name="android:background">?attr/colorPrimary</item>
@@ -34,5 +40,28 @@
 	    <item name="colorControlHighlight">?attr/colorPrimary</item>
 	    <item name="android:textColorPrimary">@android:color/white</item>
 	    <!-- <item name="android:selectedWeekBackgroundColor">@color/primary_dark_color</item> -->
+	</style>
+	
+	<style name="AppTheme.ActionMode" parent="Widget.AppCompat.ActionMode">
+	    <item name="background">?attr/colorPrimary</item>
+        <item name="backgroundSplit">@android:color/white</item>
+        <item name="titleTextStyle">@style/AppTheme.ActionMode.TitleTextStyle</item>
+        <item name="subtitleTextStyle">@style/AppTheme.ActionMode.SubtitleTextStyle</item>
+	</style>
+	
+	<style name="AppTheme.ActionMode.TitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionMode.Title">
+	    <item name="android:textColor">@android:color/white</item>
+	</style>
+	
+	<style name="AppTheme.ActionMode.SubtitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionMode.Subtitle">
+	    <item name="android:textColor">@android:color/white</item>
+	</style>
+	
+	<style name="AppTheme.Toolbar.TitleTextStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+	    <item name="android:textColor">@android:color/white</item>
+	</style>
+	
+	<style name="AppTheme.Toolbar.SubtitleTextStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+	    <item name="android:textColor">@android:color/white</item>
 	</style>
 </resources>
